[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "funcionesjo"
version = "0.2.3"
authors = [{name = "Luis Alfredo Alvarado Rodríguez", email = "laalvarado@ine.gob.gt"}]
description = "Una colección de funciones para la manipulación de fechas."
readme = "README.md"
keywords = ["development", "setup", "setuptools"]
python = "^3.9"
dependencies = [
    "python-dateutil"
]
homepage = "https://github.com/1u1s4/funcionesjo"

[project.urls]
Source = "https://github.com/1u1s4/funcionesjo"

[project.scripts]
funcionesjo = "funcionesjo:main"
